# sp500notifyer

./: .gitignore  Dockerfile  LICENSE  README.md  config.ini.example  pod.yaml  pyproject.toml
.github/workflows/: build.yaml
src/sp500notifyer/: __init__.py  cli.py  main.py
src/sp500notifyer/templates/: message_body.j2
