[project]
name = "sp500notifyer"
version = "0.1.0"
description = "Send stock market analysis to pushover"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "requests>=2.32.3",
    "yfinance>=0.2.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sp500notifyer = "sp500notifyer:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff]
line-length = 139
indent-width = 4

target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
